kube/np.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-np
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9999
    protocol: TCP
  selector:
    type: stack
    owner: lsw0504
