kube/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-ing
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: idx.10.110.164.207.sslip.io
    http:
      paths: 
      - path: /
        backend:
          serviceName: flask-np
          servicePort: 80
  # - host: hash.10.110.164.207.sslip.io
  #   http:
  #     paths: 
  #     - path: /
  #       backend:
  #         serviceName: flask-np2
  #         servicePort: 80
