kube/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-dp
spec:
  replicas: 2
  selector:
    matchLabels:
      owner: lsw0504
  # 여기부턴 app 속성
  template:
    metadata:
      # name: apps
      labels:
        type: stack
        owner: lsw0504
    spec:
      # 하나의 pod은 포트 공유하므로 중복되면 안됨
      containers:
      - name: flask-app
        image: lsw0504/flask-app:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 9999
        ports:
        - containerPort: 9999
          protocol: TCP
      # - name: node-app
      #   image: lsw0504/node-app:latest
      #   imagePullPolicy: Always
      #   livenessProbe:
      #     httpGet:
      #       path: /
      #       port: 8000
      #   ports:
      #   - containerPort: 8000
      #     protocol: TCP

# '---' 사용시 파일 안나눠도 됨

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: flask-svc
# spec:
#   ports:
#   - port: 7777
#     targetPort: 9999
#     protocol: TCP
#   selector:
#     type: stack
#     owner: lsw0504

apiVersion: v1
kind: Service
metadata:
  name: flask-np
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9999
    protocol: TCP
    nodePort: 31523
  selector:
    type: stack
    owner: lsw0504

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-ing
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: idx.10.110.164.207.sslip.io
    http:
      paths: 
      - path: /
        backend:
          serviceName: flask-np
          servicePort: 80
  # - host: hash.10.110.164.207.sslip.io
  #   http:
  #     paths: 
  #     - path: /
  #       backend:
  #         serviceName: flask-np2
  #         servicePort: 80
